add_subdirectory(barinel)
add_subdirectory(basemodel)
add_subdirectory(common)
add_subdirectory(drt)
add_subdirectory(dstar)
add_subdirectory(jaccard)
add_subdirectory(kulczynski2)
add_subdirectory(mccon)
add_subdirectory(minus)
add_subdirectory(ochiai)
add_subdirectory(op2)
add_subdirectory(tarantula)
add_subdirectory(wong3)
add_subdirectory(zoltar)

